@@ -8,3 +8,4 @@ sphinx/pycode/Grammar.*pickle
 Sphinx.egg-info/
 doc/_build/
 TAGS
+\.ropeproject/
